--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,53 +1,36 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<br>
+<h1 align="center">Demographics & Socio-economic Trend of US 2010-18</h1>
+<br>
+<div class="bg-img">
+    <div class="containerImg">
+        <div class="topnav" id="myTopnav">
+            <a class="active" asp-controller="Home" asp-action="Index">Home</a>
+            <a asp-controller="Home" asp-action="SocialMedia">Social Media</a>
 
-@model IEnumerable<DigitalRegistry.Models.Social_Media>
+            <a asp-controller="Home" asp-action="AboutUs">About Project</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
+        </div>
+    </div>
+</div>
 
-<h2>Social Media</h2>
-<hr />
-
-<tr>
-    <td>
-        <a id="dbopt" asp-controller="Home" asp-action="PopulateSocialMedia"><img src="~/img/Picture1.png" /></a>
-    </td>
-</tr>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Account Platform
-            </th>
-            <th>
-                Account Name
-            </th>
-            <th>
-                Description
-            </th>
-            <th>
-                Last Updated
-            </th>
-        </tr>
-    </thead>
-
-    <tbody>
-
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.service_display_name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.organization)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.short_description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.updated_at)
-                </td>
-            </tr>
+<div style="padding-left:20px; padding-right:20px">
+    <p>
+        The United States is the third most populous country in the world with an estimated population of 327,167,434 as of 2018. The United States Census Bureau shows a population increase of 0.75% for the twelve-month period ending in July 2012. Though high by industrialized country standards, this is below the world average annual rate of 1.1%. The total fertility rate in the United States estimated for 2018 is 1.73 children per woman, which is below the replacement fertility rate of approximately 2.1.
+        <br><br>
+        The American population almost quadrupled during the 20th century at a growth rate of about 1.3% a year from about 76 million in 1900 to 281 million in 2000. It is estimated to have reached the 200 million mark in 1967, and the 300 million mark on October 17, 2006. Population growth is fastest among minorities as a whole, and according to the Census Bureau's estimation for 2012, 50.4% of American children under the age of 1 belonged to racial and ethnic minority groups.
+        <br><br>
+        Socioeconomic indicators like the poverty rate, population change, unemployment rate, and education levels vary across the nation. ERS has compiled the latest data on these measures into a mapping and data display/download application that allows users to identify and compare States and counties on these indicators.
+    </p>
+</div>
+<!--<script>
+    function myFunction() {
+        var x = document.getElementById("myTopnav");
+        if (x.className === "topnav") {
+            x.className += " responsive";
+        } else {
+            x.className = "topnav";
         }
-    </tbody>
-</table>
+    }
+</script>-->
