--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,56 +1,187 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+
+table {
+    max-width: 100%;
+    margin: auto;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    overflow-x: auto;
 }
 
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+th {
+    padding: 5px;
+    text-align: center;
 }
 
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+td {
+    padding: 5px;
+    text-align: right;
 }
 
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+table#t01 tr:nth-child(even) {
+    background-color: #eee;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
+table#t01 tr:nth-child(odd) {
+    background-color: #fff;
 }
 
+table#t01 th {
+    background-color: grey;
+    color: white;
+}
+
+.container {
+    margin: 20px;
+    width: auto;
+}
+/* The navbar */
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+    /* Navbar links */
+    .topnav a {
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+    }
+
+        .topnav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        .topnav a.active {
+            background-color: #4CAF50;
+            color: white;
+        }
+
+    .topnav .icon {
+        display: none;
+    }
+
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {
+        display: none;
+    }
+
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .topnav.responsive {
+        position: relative;
+    }
+
+        .topnav.responsive .icon {
+            position: absolute;
+            right: 0;
+            top: 0;
+        }
+
+        .topnav.responsive a {
+            float: none;
+            display: block;
+            text-align: left;
+        }
+}
+* {
+    box-sizing: border-box;
+}
+
+.column {
+    float: left;
+    width: 50%;
+    padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+table {
+    max-width: unset;
+    margin: auto;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    overflow-x: auto;
+}
+
+th {
+    padding: 5px;
+    text-align: left;
+}
+
+td {
+    padding: 5px;
+    text-align: left;
+}
+
+table#t01 tr:nth-child(even) {
+    background-color: #eee;
+}
+
+table#t01 tr:nth-child(odd) {
+    background-color: #fff;
+}
+
+table#t01 th {
+    background-color: grey;
+    color: white;
+}
+
+
+
+
+@media screen and (max-width: 500px) {
+    .column {
+        width: 100%;
+    }
+}
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    font-family: verdana;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+
+* {
+    box-sizing: border-box;
 }
+
+.bg-img {
+    /* The image used */
+    background-image: url('~/img/demographics_icon.jpg');
+    min-height: 380px;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* Needed to position the navbar */
+    position: relative;
+}
+
+/* Position the navbar container inside the image */
+.containerImg {
+    position: absolute;
+    margin: 20px;
+    width: auto;
+}
+
