--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<br>
-<h1 align="center">Demographics & Socio-economic Trend of US 2010-18</h1>
+<h1 align="center">U.S. Digital Registry</h1>
 <br>
 <div class="bg-img">
     <div class="containerImg">
@@ -17,11 +17,10 @@
 
 <div style="padding-left:20px; padding-right:20px">
     <p>
-        The United States is the third most populous country in the world with an estimated population of 327,167,434 as of 2018. The United States Census Bureau shows a population increase of 0.75% for the twelve-month period ending in July 2012. Though high by industrialized country standards, this is below the world average annual rate of 1.1%. The total fertility rate in the United States estimated for 2018 is 1.73 children per woman, which is below the replacement fertility rate of approximately 2.1.
+        To help prevent exploitation from unofficial sources, phishing scams, or malicious entities, the U.S. Digital Registry serves as a crowdsource resource for agencies, citizens, and developers to confirm the official status of social media and public-facing collaboration accounts, mobile apps, and mobile websites. The accounts in the registry are independently updated by federal managers across the government who maintain individual agency accounts.
         <br><br>
-        The American population almost quadrupled during the 20th century at a growth rate of about 1.3% a year from about 76 million in 1900 to 281 million in 2000. It is estimated to have reached the 200 million mark in 1967, and the 300 million mark on October 17, 2006. Population growth is fastest among minorities as a whole, and according to the Census Bureau's estimation for 2012, 50.4% of American children under the age of 1 belonged to racial and ethnic minority groups.
+        The General Services Administration (GSA) wants to make it easier for citizens, application developers and federal workers to know that the social media accounts and third-party platforms federal agencies use are, in fact, legitimate. To accomplish that, the GSA announced the U.S. Digital Registry, a repository of the official accounts managed by federal agencies. It offers federal agencies a safer way to use social media, and granting them access to a wealth of information and resources.
         <br><br>
-        Socioeconomic indicators like the poverty rate, population change, unemployment rate, and education levels vary across the nation. ERS has compiled the latest data on these measures into a mapping and data display/download application that allows users to identify and compare States and counties on these indicators.
     </p>
 </div>
 <!--<script>
