social media - aesthetics

--- a/Views/Home/SocialMedia.cshtml
+++ b/Views/Home/SocialMedia.cshtml
@@ -35,7 +35,11 @@
         }
     </script>-->
 
-    <p>The U.S. is a country of 50 states covering a vast swath of North America, with Alaska in the northwest and Hawaii extending the nation’s presence into the Pacific Ocean. Major Atlantic Coast cities are New York, a global finance and culture center, and capital Washington, DC. Midwestern metropolis Chicago is known for influential architecture and on the west coast, Los Angeles' Hollywood is famed for filmmaking.</p>
+    <p>
+        The U.S. Digital Registry was announced Jan. 29 as a one-stop shop for the social networking needs of government departments who are actively engaged on such platforms as Twitter, Facebook and Instagram. 
+
+        Unlike official government websites that end with .gov or .mil, profiles created through third-party platforms can often look deceptively authentic, but are used to mislead the public and steal personal information.The registry is, in part, a cybersecurity measure and a way for people to know that they can trust the federal accounts being accessed. “A challenge in embracing emerging startup and private sector platforms for public service is ensuring that citizens can trust the app used for official engagement is managed by the legitimate agency and not a unofficial source, phishing scam or malicious entity,” the U.S. Digital Registry’s site notes.
+    </p>
     <br>
 
     <table class="table" id="t01">
