Look and feel - 1

--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -22,7 +22,7 @@
         }
     }
 </script>-->
-<p align="left">We are Group 4 of Distributed Information System Course of Fall 2019 (ISM 6225) at University of South Florida. We are pursuing MS in Business Analytics & Information Systems from Muma College of Business. This assignment is intended to help us practice html, css and optionally, JavaScript to get good design results. The project is available in the <a href="https://github.com/psariya/Assignment_LookAndFeel">Github Repository</a>. Please find our contact details below </p>
+<p align="left">We are Group 4 of Distributed Information System Course of Fall 2019 (ISM 6225) at University of South Florida. We are pursuing MS in Business Analytics & Information Systems from Muma College of Business. This assignment is intended to help us create and deploy a fully functional website on Azure, using the ASP.NET MVC structure. The project is available in the <a href="https://github.com/psariya/DigitalRegistry">Github Repository</a>. Please find our contact details below </p>
 <br>
 <table id="t01">
     <tr>
