AboutUs page Update

--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -37,7 +37,7 @@
             <br>
             chandanm@mail.usf.edu
         </td>
-        <td>Chandan is the main programmer of this html page. With his past experience as a webpage developer, he was able to provide useful insights of how to go about programming of HTML. He helped the team whenever they were stuck with errors and roadblocks in programming. His contribution was the About Project page and Unemployment page.</td>
+        <td>Chandan is the main programmer of this html page. With his past experience as a webpage developer, he was able to provide useful insights of how to go about programming of HTML. He helped the team whenever they were stuck with errors and deadlocks in programming.</td>
     </tr>
     <tr>
         <td>
@@ -47,7 +47,7 @@
             <br>
             psariya@mail.usf.edu
         </td>
-        <td>The main idea of this project was designed by Priyanka. She did the initial research of what should be the theme of this webpage and where should we extract the data, and went ahead and shared her thoughts and design with the team. The idea was immediately picked up by the team. Her contribution was the the Home page and Population page of this website.</td>
+        <td> Priyanka being experienced in MVC and .Net guided us whenever the team went clueless and has contributed in handling database functionalities and various other parts.</td>
     </tr>
     <tr>
         <td>
