--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -57,7 +57,7 @@
             <br>
             raorandhir@mail.usf.edu
         </td>
-        <td>Randhir was the person who kept the team going. He was the one who pushed the team to do things on time and held meetings to ensure that the team was progressing in the right direction. His contribution was in making the Home Page and the Unemployment page.</td>
+        <td>Randhir was the person who kept the team going. He was the one who pushed the team to do things on time and held meetings to ensure that the team was progressing in the right direction. He contributed extensively in the web look and feel part and handling Json data.</td>
     </tr>
 </table>
 <br>
