--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -24,6 +24,15 @@
 </script>-->
 <p align="left">We are Group 4 of Distributed Information System Course of Fall 2019 (ISM 6225) at University of South Florida. We are pursuing MS in Business Analytics & Information Systems from Muma College of Business. This assignment is intended to help us create and deploy a fully functional website on Azure, using the ASP.NET MVC structure. The project is available in the <a href="https://github.com/psariya/DigitalRegistry">Github Repository</a>. Please find our contact details below </p>
 <br>
+<p align="left">
+    Self Reflection:
+    1) Learnt the application of MVC in building an active website<br>
+    2) Learnt how to pull data from an API and handle JSON format<br>
+    3) Use of query string value passing to the model which in turn queries the database with the passed values<br>
+    4) Understood the use of MS Azure as a cloud platform to host the website<br>
+    5) Worked on CSS and HTML pages to enhance the aesthetics of the created website<br>
+    6) Utility of MVC in creating a unified application where the database, UI and object layers are embedded within a single framework<br>
+</p>
 <table id="t01">
     <tr>
         <th>Team Member</th>
