--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -49,7 +49,7 @@
             <br>
             chandanm@mail.usf.edu
         </td>
-        <td>Chandan is the main programmer of this html page. With his past experience as a webpage developer, he was able to provide useful insights of how to go about programming of HTML. He helped the team whenever they were stuck with errors and deadlocks in programming.</td>
+        <td>Chandan is the main programmer of this project. With his past experience as a web developer, he was able to provide useful insights of how to go about programming of HTML. He helped the team whenever they were stuck with errors and deadlocks in programming.</td>
     </tr>
     <tr>
         <td>
@@ -59,7 +59,7 @@
             <br>
             psariya@mail.usf.edu
         </td>
-        <td> Priyanka being experienced in MVC and .Net guided us whenever the team went clueless and has contributed in handling database functionalities and various other parts.</td>
+        <td>Priyanka is the chief architect of this assignment and contributed mainly to the design of the whole project. Priyanka being experienced in MVC and .Net guided us whenever the team went clueless and has contributed in handling database functionalities and various other parts.</td>
     </tr>
     <tr>
         <td>
@@ -69,7 +69,7 @@
             <br>
             raorandhir@mail.usf.edu
         </td>
-        <td>Randhir was the person who kept the team going. He was the one who pushed the team to do things on time and held meetings to ensure that the team was progressing in the right direction. He contributed extensively in the web look and feel part and handling Json data.</td>
+        <td>Randhir contributed mainly in the web look and feel part along with handling the Json data and creating the database design part of the assignment.</td>
     </tr>
 </table>
 <br>
