--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,8 +17,8 @@
 
 <div style="padding-left:20px; padding-right:20px">
 
-    
 
+    <img src="~/img/Assignment4_DIS.JPG" alt="Database Design">
 
 
     <p>
